--- a/board_list.html
+++ b/board_list.html
@@ -14,7 +14,7 @@
   <div id="wrap">
 
     <section id="main">
-        <img src="./images/logo.jpg">
+        <img src="https://github.com/loverain700/inka0072/blob/gh-pages/images/logo.JPG">
       <h2 id="board_title">자유 게시판 </h2>
       <div id="total_search">
         <div id="total">▷ 총 5개의 게시물이 있습니다.</div>
