--- a/board_view.html
+++ b/board_view.html
@@ -12,7 +12,7 @@
 <body>
     <div id="wrap">
         <section id="main">
-            <img src="./images/logo.jpg">
+            <img src="https://github.com/loverain700/inka0072/blob/gh-pages/images/logo.JPG">
             <h2 id="board_title">자유 게시판 </h2>
             <div id="view_title_box">
                 <span>안녕하세요!</span>
