--- a/board_write.html
+++ b/board_write.html
@@ -11,7 +11,7 @@
 <div id="wrap">
 
 <section id="main">
-    <img src="./images/logo.jpg">
+    <img src="https://github.com/loverain700/inka0072/blob/gh-pages/images/logo.JPG">
   <h2 id="board_title">자유 게시판 </h2>
   <div id="write_title"><h2>글쓰기</h2></div>
   <table>
